--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,11 @@
 <html>
 
-<body>
-    <h1 class="clock">aa</h1>
+<body data-tauri-drag-region>
+    <div class="main">
+        <div class="content">
+            <h1 data-tauri-drag-region class="clock">aa</h1>
+        </div>
+    </div>
 </body>
 <script>
     let date = new Date();
@@ -14,6 +18,7 @@
         document.getElementsByClassName("clock")[0].innerHTML = date.toLocaleTimeString();
 
     }, intervalMs);
+
 </script>
 <style>
     .main {
@@ -56,7 +61,7 @@
         height: 100%;
         width: 100%;
         padding: 0;
-        font-size: 50vmin;
+        font-size: 60vmin;
         padding: 0;
         margin: 0;
     }
@@ -78,6 +83,7 @@
     html,
     .root {
         height: 100%;
+        width: 100%;
         padding: 0;
         margin: 0;
     }
